--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
 
 - name: Ansible Playbook for configuring brand new Raspberry Pi
 
-  hosts: clusters
+  hosts: cluster
   roles:
     - node-compute
   remote_user: pi
